#PK-167 Font changes

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
@@ -6,7 +6,7 @@
 @inject IMemberAppService MemberAppService
 @inject NavigationManager NavigationManager
 
-<Div Class="rounded-cards ff-inter">
+<Div Class="rounded-cards">
     <h5 Class="text-dark mb-lg-2 mt-lg-3">
         <Span Class="cursor-pointer" @onclick="@(() => NavigationManager.NavigateTo("Members"))">
             <Icon Name="IconName.ArrowLeft" Class="me-1"></Icon>
