--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
@@ -8,7 +8,7 @@
 
 <Div Class="rounded-cards">
     <h5 Class="text-dark mb-lg-2 mt-lg-3">
-        <Span Class="cursor-pointer" @onclick="@(() => NavigationManager.NavigateTo("Members"))">
+        <Span Class="cursor-pointer" @onclick="NavigateToMember">
             <Icon Name="IconName.ArrowLeft" Class="me-1"></Icon>
             @L["Members"]
         </Span>
@@ -34,107 +34,7 @@
         </Items>
         <Content>
             <TabPanel Name="Details">
-                <Row>
-                    <Column ColumnSize="ColumnSize.Is4">
-                        <Card>
-                            <CardBody Class="px-0">
-                                <h4 class="px-3">@L["BasicDetails"]</h4>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["LoginMethod"]</h6>
-                                    <Span>Account and password</Span>
-                                </Div>
-                                <Divider Class="my-2"></Divider>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["Email"]</h6>
-                                    <Span>@Member?.Email</Span>
-                                </Div>
-                                <Divider Class="my-2"></Divider>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["Phone"]</h6>
-                                    <Span>@Member?.PhoneNumber</Span>
-                                </Div>
-                                <Divider Class="my-2"></Divider>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["Birthday"]</h6>
-                                    <Span>2000/01/01</Span>
-                                </Div>
-                                <Divider Class="my-2"></Divider>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["PostCode"]</h6>
-                                    <Span>407</Span>
-                                </Div>
-                                <Divider Class="my-2"></Divider>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["City"]</h6>
-                                    <Span>New York</Span>
-                                </Div>
-                                <Divider Class="my-2"></Divider>
-                                <Div Class="px-3">
-                                    <h6 class="m-0">@L["Address"]</h6>
-                                    <Span>House #25</Span>
-                                </Div>
-                            </CardBody>
-                        </Card>
-                    </Column>
-                    <Column ColumnSize="ColumnSize.Is8">
-                        <Card>
-                            <CardBody>
-                                <h4>@L["Payment"]</h4>
-                                <Row Class="py-3" HorizontalGutter="10">
-                                    <Column ColumnSize="ColumnSize.Is4">
-                                        <Div Class="payment-card bg-success-light">
-                                            <Div Class="member-payment-card">
-                                                <Div>
-                                                    <img src="/images/icons/payment-icon-paid.png" />
-                                                </Div>
-                                                <Div>
-                                                    <h5 class="m-0">@L["Paid"]</h5>
-                                                    <h3 class="fw-bolder m-0">$50 (2)</h3>
-                                                </Div>
-                                            </Div>
-                                        </Div>
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is4">
-                                        <Div Class="payment-card bg-warning-light">
-                                            <Div Class="member-payment-card">
-                                                <Div>
-                                                    <img src="/images/icons/payment-icon-unpaid.png" />
-                                                </Div>
-                                                <Div>
-                                                    <h5 class="m-0">@L["Unpaid/Due"]</h5>
-                                                    <h3 class="fw-bolder m-0">$12 (1)</h3>
-                                                </Div>
-                                            </Div>
-                                        </Div>
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is4">
-                                        <Div Class="payment-card bg-danger-light">
-                                            <Div Class="member-payment-card">
-                                                <Div>
-                                                    <img src="/images/icons/payment-icon-refund.png" />
-                                                </Div>
-                                                <Div>
-                                                    <h5 class="m-0">@L["Refunded"]</h5>
-                                                    <h3 class="fw-bolder m-0">$0 (0)</h3>
-                                                </Div>
-                                            </Div>
-                                        </Div>
-                                    </Column>
-                                </Row>
-                            </CardBody>
-                        </Card>
-
-                        <Card>
-                            <CardBody>
-                                <h4>@L["DataManagement"]</h4>
-                                <button class="btn-delete">
-                                    @L["DeleteAccount"]
-                                </button>
-                                <p class="mt-2">@L["DeleteMemberCautionMessage"]</p>
-                            </CardBody>
-                        </Card>
-                    </Column>
-                </Row>
+                <MemberDetailsTab Member="Member" CanDeleteMember="CanDeleteMember" OnDelete="@NavigateToMember" />
             </TabPanel>
         </Content>
     </Tabs>
