--- a/src/Kooco.Pikachu.Blazor/_Imports.razor
+++ b/src/Kooco.Pikachu.Blazor/_Imports.razor
@@ -12,3 +12,4 @@
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
 @using Kooco.Pikachu.Blazor.Layouts
+@using Kooco.Pikachu.Blazor.Pages.Components
